:feature: Queries now working for GET.
